build bouts in runner, talk to players over sockets, draw in real time